--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <div class="main">
+        <div>
+            <h3>Player: <span class="player">0</span></h3>
+            <h3>Computer: <span class="computer">0</span></h3>
+        </div>
+        <div>
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+        </div>
+        <div class="results">   
+        </div>
+    </div>
+    
     
 </body>
 <script src="index.js"></script>
